fixed spacing of css

--- a/styles/tn-stylesheet.css
+++ b/styles/tn-stylesheet.css
@@ -1,8 +1,8 @@
 .tn-section {
-	clear: both;
-	padding: 0px;
-	margin: 0px;
-    font-family: 'Abel', 'Barlow', sans-serif; 
+  clear: both;
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Abel', 'Barlow', sans-serif; 
 }
 
 .tn-section img {
@@ -30,34 +30,48 @@
 }
 
 .tn-col {
-	display: block;
-	float:left;
-	margin: 1% 0 1% 0%;
-    text-align: center;
+  display: block;
+  float:left;
+  margin: 1% 0 1% 0%;
+  text-align: center;
 }
 
-.tn-col:first-child { margin-left: 0; }
+.tn-col:first-child { 
+  margin-left: 0; 
+}
 
-.tn-group:before,
-.tn-group:after { content:""; display:table; }
-.tn-group:after { clear:both;}
-.tn-group { zoom:1;}
+.tn-group:before, .tn-group:after { 
+  content:""; 
+  display:table; 
+}
+
+.tn-group:after {
+  clear:both;
+}
+
+.tn-group { 
+  zoom:1;
+}
 
 .tn-span_4_of_4 {
-	width: 100%;
+  width: 100%;
 }
 
 .tn-span_3_of_4 {
-	width: 74.6%;
+  width: 74.6%;
 }
 
 .tn-span_2_of_4 {
-	width: 49.2%;
+  width: 49.2%;
 }
 .tn-span_1_of_4 {
-	width: 25%;
+  width: 25%;
 }
 
 @media only screen and (max-width: 480px) {
-	.tn-col {  margin: .5% 0 .5% 0%; }
-	.tn-span_1_of_4, .tn-span_2_of_4, .tn-span_3_of_4, .tn-span_4_of_4 { width: 100%; }
+  .tn-col {
+    margin: .5% 0 .5% 0%; 
+  }
+  .tn-span_1_of_4, .tn-span_2_of_4, .tn-span_3_of_4, .tn-span_4_of_4 { 
+    width: 100%; 
+  }
